Minimize platform/api/logging.h, consolidate macros/impl elsewhere.
Reduces the logging API that must be implemented by embedders to three
simple functions: IsLoggingOn(), LogWithLevel(), and Break(). Added
documentation for these functions.

All logging convenience macros that OpenScreen code uses have been moved
to platform/api/internal/logging_macros.h, and are being #included from
platform/api/logging.h. This is to make it easier for embedder
developers to identify what is being required from them.

All standalone impl for logging has been consolidated into
platform/impl/logging.h (declaration of init routines) and
logging_posix.cc (POSIX implementation, writing to stderr or a FIFO).

Bug: openscreen:77
Change-Id: Id14a380569373a443a81b7bb5139b4648643495e

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -8,11 +8,11 @@ source_set("platform") {
   defines = []
 
   sources = [
+    "api/internal/logging_macros.h",
     "api/internal/trace_logging_internal.cc",
     "api/internal/trace_logging_internal.h",
     "api/internal/trace_logging_macros_internal.h",
     "api/logging.h",
-    "api/logging_util.cc",
     "api/network_interface.cc",
     "api/network_interface.h",
     "api/platform_client.cc",
@@ -58,6 +58,7 @@ source_set("platform") {
 
   if (!build_with_chromium) {
     sources += [
+      "impl/logging.h",
       "impl/socket_handle.h",
       "impl/socket_handle_waiter.cc",
       "impl/socket_handle_waiter.h",
@@ -94,6 +95,7 @@ source_set("platform") {
 
     if (is_posix) {
       sources += [
+        "impl/logging_posix.cc",
         "impl/platform_client_posix.cc",
         "impl/platform_client_posix.h",
         "impl/scoped_pipe.h",
@@ -120,10 +122,6 @@ source_set("platform") {
         "impl/udp_socket_reader_posix.h",
       ]
     }
-
-    deps = [
-      ":default_logger",
-    ]
   }
 }
 
@@ -142,21 +140,6 @@ source_set("test") {
   deps = [
     ":platform",
     "../third_party/googletest:gmock",
-  ]
-}
-
-source_set("default_logger") {
-  sources = [
-    "impl/logging.cc",
-  ]
-
-  if (is_posix) {
-    sources += [ "impl/log_initializer_posix.cc" ]
-  }
-
-  deps = [
-    "../third_party/abseil",
-    "../util",
   ]
 }
 
