Network interfaces platform API: Separate structs from API.
Moves the data structs, and their associated implementation to
platform/base. This is to make it clear that an embedder only needs to
implement one function, and nothing else.

Also, some clean-up:

1. Merged the InterfaceAddresses struct with InterfaceInfo, since the
vector of subnets always goes together with the InterfaceInfo.

2. Minor style fixes.

Bug: openscreen:77
Change-Id: Ifb111a3c3c26f0dd5b6f40454bd586f6d8c77255

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -13,7 +13,6 @@ source_set("platform") {
     "api/internal/trace_logging_internal.h",
     "api/internal/trace_logging_macros_internal.h",
     "api/logging.h",
-    "api/network_interface.cc",
     "api/network_interface.h",
     "api/platform_client.cc",
     "api/platform_client.h",
@@ -40,6 +39,8 @@ source_set("platform") {
     "base/ip_address.h",
     "base/location.cc",
     "base/location.h",
+    "base/network_interface_structs.cc",
+    "base/network_interface_structs.h",
     "base/serial_delete_ptr.h",
     "base/socket_state.h",
     "base/tls_connect_options.h",
