Start using ReceiverConfig, ReceiverSession
This patch begins the process of creating a receiver session class that
is integrated with the Receiver implementation. This first step includes
enhancements to the ReceiverConfig class that make it usable by the
session and the receiver, and contains an API-only declaration of
ReceiverSession. Finally, the Receiver class is modified to use the
ReceiverConfig, giving us a base for a fleshed out ReceiverSession
class.

Change-Id: I7585622b95227c340cbdeb05f1ea2d3511bbcf30

--- a/cast/streaming/BUILD.gn
+++ b/cast/streaming/BUILD.gn
@@ -2,15 +2,25 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+# TODO(jophba): merge with streaming source set after streaming/cast merge.
+source_set("streaming_configs") {
+  sources = [
+    "session_config.cc",
+    "session_config.h",
+  ]
+
+  public_configs = [ "../../build:openscreen_include_dirs" ]
+}
+
 source_set("streaming") {
   sources = [
-    "reciever_config.h",
-    "sender_config.h",
-    "session_config.h",
-    "video_codec_params.h",
+    "receiver_session.cc",
+    "receiver_session.h",
   ]
 
   public_deps = [
+    ":streaming_configs",
     "../../streaming/cast:common",
+    "../../streaming/cast:receiver",
   ]
 }
