--- a/cast/streaming/BUILD.gn
+++ b/cast/streaming/BUILD.gn
@@ -2,15 +2,26 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-source_set("streaming") {
+# TODO(jophba): merge with streaming source set after streaming/cast merge.
+source_set("streaming_configs") {
   sources = [
-    "reciever_config.h",
+    "receiver_config.cc",
+    "receiver_config.h",
     "sender_config.h",
+    "session_config.cc",
     "session_config.h",
     "video_codec_params.h",
+  ]
+}
+
+source_set("streaming") {
+  sources = [
+    "receiver_session.cc",
+    "receiver_session.h",
   ]
 
   public_deps = [
     "../../streaming/cast:common",
+    "../../streaming/cast:receiver",
   ]
 }
