--- a/streaming/cast/BUILD.gn
+++ b/streaming/cast/BUILD.gn
@@ -52,6 +52,7 @@ source_set("common") {
   ]
 
   deps = [
+    "../../cast/streaming:streaming_configs",
     "../../platform",
     "../../util",
   ]
