--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -42,15 +42,19 @@ source_set("dnssd") {
 
   sources = [
     "dnssd/dns_sd_temp.cc",
-    "dnssd/impl/constants.h",
     "dnssd/impl/conversion_layer.cc",
     "dnssd/impl/conversion_layer.h",
     "dnssd/impl/dns_data.cc",
     "dnssd/impl/dns_data.h",
+    "dnssd/impl/dns_query_info.h",
+    "dnssd/impl/instance_key.cc",
+    "dnssd/impl/instance_key.h",
     "dnssd/impl/publisher_impl.cc",
     "dnssd/impl/publisher_impl.h",
     "dnssd/impl/querier_impl.cc",
     "dnssd/impl/querier_impl.h",
+    "dnssd/impl/service_key.cc",
+    "dnssd/impl/service_key.h",
     "dnssd/public/instance_record.cc",
     "dnssd/public/instance_record.h",
     "dnssd/public/publisher.h",
@@ -68,12 +72,15 @@ source_set("unittests") {
   testonly = true
 
   sources = [
-    "dnssd/impl/constants_unittest.cc",
     "dnssd/impl/conversion_layer_unittest.cc",
     "dnssd/impl/dns_data_unittest.cc",
+    "dnssd/impl/instance_key_unittest.cc",
     "dnssd/impl/publisher_impl_unittest.cc",
+    "dnssd/impl/querier_impl_unittest.cc",
+    "dnssd/impl/service_key_unittest.cc",
     "dnssd/public/instance_record_unittest.cc",
     "dnssd/public/txt_record_unittest.cc",
+    "dnssd/testing/fake_dns_record_factory.cc",
     "mdns/mdns_querier_unittest.cc",
     "mdns/mdns_random_unittest.cc",
     "mdns/mdns_reader_unittest.cc",
