[Open Screen] Simplify TxtRecordRdata constructors.
A TXT record is fundamentally a list of variable-length octet data entries.

This updates the main TxtRecordRdata ctor to accept that data type, and removes
others, which were redundant or only used in unit tests.

Adds a convenience function for constructing a TXT record from a list of
strings to mdns_test_util for unit tests.

Bug: openscreen:78
Change-Id: Ifb4b90eb0d359526431eeae7b8091adedd9cc6d3

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -59,8 +59,22 @@ source_set("dnssd") {
     "dnssd/public/txt_record.h",
   ]
 
-  deps = [
+  public_deps = [
     ":mdns",
+  ]
+}
+
+source_set("testing") {
+  testonly = true
+
+  sources = [
+    "mdns/testing/mdns_test_util.cc",
+    "mdns/testing/mdns_test_util.h",
+  ]
+
+  public_deps = [
+    ":mdns",
+    "../third_party/abseil",
   ]
 }
 
@@ -87,6 +101,7 @@ source_set("unittests") {
   deps = [
     ":dnssd",
     ":mdns",
+    ":testing",
     "../third_party/googletest:gmock",
     "../third_party/googletest:gtest",
     "../util",
