DNS-SD: Implement factory methods
Implement the Platform-overridable factories added in CL
https://chromium-review.googlesource.com/c/openscreen/+/1913977

Change-Id: I1ff285f7c6b9b3fb3220a66be93e8e1af2f754e6

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -51,10 +51,13 @@ source_set("dnssd") {
     "dnssd/impl/publisher_impl.h",
     "dnssd/impl/querier_impl.cc",
     "dnssd/impl/querier_impl.h",
+    "dnssd/impl/service_impl.cc",
+    "dnssd/impl/service_impl.h",
     "dnssd/public/instance_record.cc",
     "dnssd/public/instance_record.h",
     "dnssd/public/publisher.h",
     "dnssd/public/querier.h",
+    "dnssd/public/service.h",
     "dnssd/public/txt_record.cc",
     "dnssd/public/txt_record.h",
   ]
