--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -52,12 +52,15 @@ source_set("dnssd") {
     "dnssd/impl/publisher_impl.h",
     "dnssd/impl/querier_impl.cc",
     "dnssd/impl/querier_impl.h",
+    "dnssd/impl/service_impl.cc",
+    "dnssd/impl/service_impl.h",
     "dnssd/impl/service_key.cc",
     "dnssd/impl/service_key.h",
     "dnssd/public/instance_record.cc",
     "dnssd/public/instance_record.h",
     "dnssd/public/publisher.h",
     "dnssd/public/querier.h",
+    "dnssd/public/service.h",
     "dnssd/public/txt_record.cc",
     "dnssd/public/txt_record.h",
   ]
