DNS-SD: Querier
This CL adds a querier implementation, as well as extensive testing
around its functionality.

When a caller wants to initiate a query, they register the query by
calling QuerierImpl::StartQuery. Internally, this begins a new mDNSquery
for PTR records described by the service and domain values provided.
All callbacks for this query will be sent back to QuerierImpl. Then, the
callback handles PTR and non-PTR callback responses differently:
- Recieving a change to a PTR record means a new instance came up or was
  shut down, so all A, AAAA, SRV, and TXT record queries need to be
  started or stopped.
- A non-PTR record is information related to a specific instance which
  was described by a previously recieved PTR record. Upon recipt, the
  following process is used:
  1) Check if enough information about this instance has been recieved
     to fully identify the instance.
  2) Apply the change recieved.
  3) Check if a fully identified instance is now possible.
  4) Depending on the results of steps 1 and 3, up to one of the
     following may be fired on the callback registered in StartQuery:
     - OnInstanceCreated
     - OnInstanceUpdated
     - OnInstanceDeleted

Change-Id: I5ca4a2b7da6fa06f9de24c3af8d28f4abb124d56

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -91,6 +91,7 @@ source_set("unittests") {
     "dnssd/impl/dns_data_unittest.cc",
     "dnssd/impl/instance_key_unittest.cc",
     "dnssd/impl/publisher_impl_unittest.cc",
+    "dnssd/impl/querier_impl_unittest.cc",
     "dnssd/impl/service_key_unittest.cc",
     "dnssd/public/instance_record_unittest.cc",
     "dnssd/public/txt_record_unittest.cc",
