--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -28,6 +28,10 @@ source_set("util") {
     "saturate_cast.h",
     "std_util.h",
     "stringprintf.h",
+    "trace_logging.h",
+    "trace_logging/macro_support.h",
+    "trace_logging/scoped_trace_operations.cc",
+    "trace_logging/scoped_trace_operations.h",
     "yet_another_bit_vector.cc",
     "yet_another_bit_vector.h",
   ]
@@ -55,11 +59,14 @@ source_set("unittests") {
     "json/json_writer_unittest.cc",
     "operation_loop_unittest.cc",
     "saturate_cast_unittest.cc",
+    "trace_logging/scoped_trace_operations_unittest.cc",
+    "trace_logging_unittest.cc",
     "yet_another_bit_vector_unittest.cc",
   ]
 
   deps = [
     ":util",
+    "../platform:test",
     "../third_party/abseil",
     "../third_party/boringssl",
     "../third_party/googletest:gmock",
