DNS-SD: Implement factory methods
Implement the Platform-overridable factories added in CL
https://chromium-review.googlesource.com/c/openscreen/+/1913977

Change-Id: I3c1fd009f39e570a81a066dbd35b1faf692b5b5d

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -52,6 +52,8 @@ source_set("dnssd") {
     "dnssd/impl/publisher_impl.h",
     "dnssd/impl/querier_impl.cc",
     "dnssd/impl/querier_impl.h",
+    "dnssd/impl/service_impl.cc",
+    "dnssd/impl/service_impl.h",
     "dnssd/impl/service_key.cc",
     "dnssd/impl/service_key.h",
     "dnssd/public/dns_sd_service.h",
