--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -106,6 +106,8 @@ source_set("platform") {
         "impl/stream_socket.h",
         "impl/stream_socket_posix.cc",
         "impl/stream_socket_posix.h",
+        "impl/timeval_posix.cc",
+        "impl/timeval_posix.h",
         "impl/tls_connection_factory_posix.cc",
         "impl/tls_connection_factory_posix.h",
         "impl/tls_connection_posix.cc",
