[Open Screen] Fix some TODOs in SocketHandleWaiterPosix.
- Remove the Create() method as it's unused.
- Move ToTimeval() out of SHWP to its own file.

Change-Id: I3d48dd08100c636d98639709d57c070635d407d6

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -106,6 +106,8 @@ source_set("platform") {
         "impl/stream_socket.h",
         "impl/stream_socket_posix.cc",
         "impl/stream_socket_posix.h",
+        "impl/timeval_posix.cc",
+        "impl/timeval_posix.h",
         "impl/tls_connection_factory_posix.cc",
         "impl/tls_connection_factory_posix.h",
         "impl/tls_connection_posix.cc",
@@ -170,6 +172,7 @@ source_set("unittests") {
         "impl/scoped_pipe_unittest.cc",
         "impl/socket_address_posix_unittest.cc",
         "impl/socket_handle_waiter_posix_unittest.cc",
+        "impl/timeval_posix_unittest.cc",
         "impl/tls_data_router_posix_unittest.cc",
         "impl/tls_write_buffer_unittest.cc",
         "impl/udp_socket_reader_posix_unittest.cc",
