--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -15,6 +15,8 @@ source_set("mdns") {
     "mdns/mdns_record_changed_callback.h",
     "mdns/mdns_records.cc",
     "mdns/mdns_records.h",
+    "mdns/mdns_responder.cc",
+    "mdns/mdns_responder.h",
     "mdns/mdns_sender.cc",
     "mdns/mdns_sender.h",
     "mdns/mdns_service_impl.cc",
