--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -130,6 +130,7 @@ source_set("test") {
     "test/fake_task_runner.h",
     "test/fake_udp_socket.cc",
     "test/fake_udp_socket.h",
+    "test/mock_tls_connection.h",
     "test/trace_logging_helpers.h",
   ]
 
