--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -21,6 +21,8 @@ source_set("util") {
     "integer_division.h",
     "json/json_reader.cc",
     "json/json_reader.h",
+    "json/json_value.cc",
+    "json/json_value.h",
     "json/json_writer.cc",
     "json/json_writer.h",
     "operation_loop.cc",
@@ -32,10 +34,13 @@ source_set("util") {
     "yet_another_bit_vector.h",
   ]
 
+  public_deps = [
+    "../third_party/jsoncpp",
+  ]
+
   deps = [
     "../third_party/abseil",
     "../third_party/boringssl",
-    "../third_party/jsoncpp",
   ]
 
   public_configs = [ "../build:openscreen_include_dirs" ]
@@ -52,6 +57,7 @@ source_set("unittests") {
     "crypto/sha2_unittest.cc",
     "integer_division_unittest.cc",
     "json/json_reader_unittest.cc",
+    "json/json_value_unittest.cc",
     "json/json_writer_unittest.cc",
     "operation_loop_unittest.cc",
     "saturate_cast_unittest.cc",
