mDNS: Responder + Publisher API
This CL adds 2 new APIs:
- mDNS Responder
- mDNS Publisher

the mDNS Responder API is used to publish new records to our
mDNS implementation. This is based on an API originally
defined by Max in CL:
https://chromium-review.googlesource.com/c/openscreen/+/1847209

mDNS Publisher allows for us to register/deregister/update
records we are currently advertising.

These 2 classes could be combined (as in iteration 2), but both
are relatively complex and have relatively disjoint purposes,
so there is no reason to combine them

Change-Id: Ie39b1405434f5c210875a0e05468d41eca4342b2

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -6,6 +6,7 @@ import("//build_overrides/build.gni")
 
 source_set("mdns") {
   sources = [
+    "mdns/mdns_publisher.h",
     "mdns/mdns_querier.cc",
     "mdns/mdns_querier.h",
     "mdns/mdns_reader.cc",
@@ -15,6 +16,8 @@ source_set("mdns") {
     "mdns/mdns_record_changed_callback.h",
     "mdns/mdns_records.cc",
     "mdns/mdns_records.h",
+    "mdns/mdns_responder.cc",
+    "mdns/mdns_responder.h",
     "mdns/mdns_sender.cc",
     "mdns/mdns_sender.h",
     "mdns/mdns_service_impl.cc",
