Implement ReceiverSession methods
This patch implements the ReceiverSession class, including the Answer
workflow.

Change-Id: I9ecf514f8cebfccf4d57367c03085ccdbb51fa47

--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -90,7 +90,6 @@ source_set("unittests") {
   deps = [
     ":certificate",
     ":channel",
-    ":channel_proto",
     ":test_helpers",
     "../../platform",
     "../../third_party/boringssl",
@@ -98,5 +97,6 @@ source_set("unittests") {
     "../../third_party/googletest:gtest",
     "../../util",
     "certificate/proto:certificate_unittest_proto",
+    "channel/proto:channel_proto",
   ]
 }
