--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -37,7 +37,7 @@ source_set("util") {
     "yet_another_bit_vector.h",
   ]
 
-  deps = [
+  public_deps = [
     "../third_party/abseil",
     "../third_party/boringssl",
     "../third_party/jsoncpp",
