Implement ReceiverSession methods
This patch implements the ReceiverSession class, including the Answer
workflow.

Change-Id: I9ecf514f8cebfccf4d57367c03085ccdbb51fa47

--- a/cast/streaming/BUILD.gn
+++ b/cast/streaming/BUILD.gn
@@ -102,6 +102,7 @@ source_set("unittests") {
     "ntp_time_unittest.cc",
     "packet_receive_stats_tracker_unittest.cc",
     "packet_util_unittest.cc",
+    "receiver_session_unittest.cc",
     "receiver_unittest.cc",
     "rtcp_common_unittest.cc",
     "rtp_packet_parser_unittest.cc",
