--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -69,5 +69,6 @@ source_set("unittests") {
     "../../third_party/googletest:gtest",
     "../../util",
     "certificate/proto:certificate_unittest_proto",
+    "channel/proto:channel_proto",
   ]
 }
