--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -28,7 +28,8 @@ source_set("util") {
     "operation_loop.h",
     "saturate_cast.h",
     "std_util.h",
-    "stringprintf.h",
+    "string.cc",
+    "string.h",
     "trace_logging.h",
     "trace_logging/macro_support.h",
     "trace_logging/scoped_trace_operations.cc",
@@ -37,7 +38,7 @@ source_set("util") {
     "yet_another_bit_vector.h",
   ]
 
-  deps = [
+  public_deps = [
     "../third_party/abseil",
     "../third_party/boringssl",
     "../third_party/jsoncpp",
@@ -60,6 +61,7 @@ source_set("unittests") {
     "json/json_writer_unittest.cc",
     "operation_loop_unittest.cc",
     "saturate_cast_unittest.cc",
+    "string_unittest.cc",
     "trace_logging/scoped_trace_operations_unittest.cc",
     "trace_logging_unittest.cc",
     "yet_another_bit_vector_unittest.cc",
