--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -9,7 +9,6 @@ source_set("platform") {
 
   sources = [
     "api/logging.h",
-    "api/network_interface.cc",
     "api/network_interface.h",
     "api/scoped_wake_lock.cc",
     "api/scoped_wake_lock.h",
@@ -31,6 +30,8 @@ source_set("platform") {
     "base/ip_address.h",
     "base/location.cc",
     "base/location.h",
+    "base/network_interface_structs.cc",
+    "base/network_interface_structs.h",
     "base/serial_delete_ptr.h",
     "base/socket_state.h",
     "base/tls_connect_options.h",
