Fix a build issue for platforms with different host and target toolchains.
The "tools/cddl" target is only defined for the host toolchain. As a
result, the "gn_all" target was failing to build properly on systems
with different host and target toolchains.

Change-Id: I1d18490442b9ed3aee8f76fd3cd7f13806a557c7

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -23,9 +23,12 @@ group("gn_all") {
     "third_party/boringssl",
     "third_party/jsoncpp",
     "third_party/tinycbor",
-    "tools/cddl",
     "util",
   ]
+
+  if (current_toolchain == host_toolchain) {
+    deps += [ "tools/cddl" ]
+  }
 
   if (use_mdns_responder) {
     deps += [ "osp/impl/discovery/mdns:mdns_demo" ]
