Minify platform/api/time.h by splitting-out traits definitions.
Clarifies which two time functions need to be implemeted by the embedder
by moving the chrono "TrivialClock" traits definitions to platform/base.

Bug: openscreen:77
Change-Id: I8e8f59173a6fa115f98eca40ff0e0e89e8ca15a0

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -40,6 +40,8 @@ source_set("platform") {
     "base/trace_logging_activation.cc",
     "base/trace_logging_activation.h",
     "base/trace_logging_types.h",
+    "base/trivial_clock_traits.cc",
+    "base/trivial_clock_traits.h",
     "base/udp_packet.cc",
     "base/udp_packet.h",
   ]
