Remove dependencies on openssl from platform/api.
Moves all certificate utilities out of TlsCredentials (in platform/base)
to a new util/crypto/certificate_utilities.* library.

Then, all remaning boringssl dependencies are removed from platform/api
by modifying the TlsConnectionFactory API to provide DER-encoded X509
certificates (i.e., a serialized form) instead of the boringssl X509
struct.

Bug: openscreen:89
Change-Id: Iaaeec687d81770bb8e7e2bab4837880c77a37aa9

--- a/cast/sender/BUILD.gn
+++ b/cast/sender/BUILD.gn
@@ -13,12 +13,14 @@ source_set("channel") {
   ]
 
   deps = [
+    "../../util",
     "../common/certificate/proto:certificate_proto",
     "../common/channel/proto:channel_proto",
   ]
 
   public_deps = [
     "../../platform",
+    "../../third_party/boringssl",
   ]
 }
 
