--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -10,6 +10,8 @@ source_set("util") {
     "alarm.h",
     "big_endian.cc",
     "big_endian.h",
+    "crypto/certificate_utils.cc",
+    "crypto/certificate_utils.h",
     "crypto/openssl_util.cc",
     "crypto/openssl_util.h",
     "crypto/rsa_private_key.cc",
@@ -52,6 +54,7 @@ source_set("unittests") {
   sources = [
     "alarm_unittest.cc",
     "big_endian_unittest.cc",
+    "crypto/certificate_utils_unittest.cc",
     "crypto/rsa_private_key_unittest.cc",
     "crypto/secure_hash_unittest.cc",
     "crypto/sha2_unittest.cc",
