Network interfaces platform API: Separate structs from API.
Moves the data structs, and their associated implementation to
platform/base. This is to make it clear that an embedder only needs to
implement one function, and nothing else.

Also, some clean-up:

1. Merged the InterfaceAddresses struct with InterfaceInfo, since the
vector of subnets always goes together with the InterfaceInfo.

2. Minor style fixes.

Bug: openscreen:77
Change-Id: Ifb111a3c3c26f0dd5b6f40454bd586f6d8c77255

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -9,7 +9,6 @@ source_set("platform") {
 
   sources = [
     "api/logging.h",
-    "api/network_interface.cc",
     "api/network_interface.h",
     "api/scoped_wake_lock.cc",
     "api/scoped_wake_lock.h",
@@ -27,6 +26,8 @@ source_set("platform") {
     "api/udp_socket.h",
     "base/error.cc",
     "base/error.h",
+    "base/interface_info.cc",
+    "base/interface_info.h",
     "base/ip_address.cc",
     "base/ip_address.h",
     "base/location.cc",
