--- a/cast/streaming/BUILD.gn
+++ b/cast/streaming/BUILD.gn
@@ -128,7 +128,7 @@ source_set("unittests") {
   ]
 }
 
-if (build_with_chromium) {
+if (is_mac || build_with_chromium) {
   import("//testing/libfuzzer/fuzzer_test.gni")
 
   fuzzer_test("compound_rtcp_parser_fuzzer") {
@@ -178,29 +178,4 @@ if (build_with_chromium) {
     # Note: 1500 is approx. kMaxRtpPacketSize in rtp_defines.h.
     libfuzzer_options = [ "max_len=1500" ]
   }
-} else {
-  # Note: The following is commented out because, as of this writing, the LLVM
-  # toolchain we pull does not include libclang_rt.fuzzer-x86_64.a, the
-  # libFuzzer library *with* a main() to drive everything. Thus, the only way to
-  # get things working is to specify an exact path to the fuzzer_no_main variant
-  # of the library that *is* avalable, and then provide our own main(). In
-  # summary, what you see below demonstrates how to get it working specifically
-  # for Clang 9.0.0 on Linux x86_64. One need only modify the "libs = [...]" for
-  # a different Clang, OS, or architecture.
-  # if (is_clang) {
-  #   executable("rtp_packet_parser_fuzzer") {
-  #     testonly = true
-  #     defines = [ "NEEDS_MAIN_TO_CALL_FUZZER_DRIVER" ]
-  #     sources = [
-  #       "rtp_packet_parser_fuzzer.cc",
-  #     ]
-  #     cflags_cc = [ "-fsanitize=address,fuzzer-no-link,undefined" ]
-  #     ldflags = [ "-fsanitize=address,undefined" ]
-  #     libs = [ "$clang_base_path/lib/clang/9.0.0/lib/linux/libclang_rt.fuzzer_no_main-x86_64.a" ]
-  #     deps = [
-  #       ":receiver",
-  #       "../../third_party/abseil",
-  #     ]
-  #   }
-  # }
 }
