Add ANSWER messaging
This patch lays the groundwork for the Receiver ANSWER messaging, by
implementing the message types laid out in the offer/answer spec.

Change-Id: I2d5d9eb102ec3e4760c6bf27f7c3b3900709574b

--- a/cast/streaming/BUILD.gn
+++ b/cast/streaming/BUILD.gn
@@ -51,10 +51,13 @@ source_set("common") {
 
 source_set("receiver") {
   sources = [
+    "answer_messages.cc",
+    "answer_messages.h",
     "compound_rtcp_builder.cc",
     "compound_rtcp_builder.h",
     "frame_collector.cc",
     "frame_collector.h",
+    "messages.h",
     "offer_messages.cc",
     "offer_messages.h",
     "packet_receive_stats_tracker.cc",
@@ -99,6 +102,7 @@ source_set("unittests") {
   testonly = true
 
   sources = [
+    "answer_messages_unittest.cc",
     "compound_rtcp_builder_unittest.cc",
     "compound_rtcp_parser_unittest.cc",
     "expanded_value_base_unittest.cc",
