mDNS: Publisher Impl - Registration flow
This CL is the first part of the MdnsPublisher's implementation,
specifically it is responsible for handling registration of mDNS Records
through 3 methods:
 - RegisterRecord
 - UpdateRegisteredRecord
 - UnregisterRecord

The implementations of the above are split amongst PTR records and
non-PTR records, because PTR and Non-PTR records are simpler to handle
separately. PTR records are not unique records, while non-PTR records
are.

The API for claiming exclusive ownership is not currently available, so
it is not used here. For that reason, the IsExclusiveOwner method is
mocked. Once that flow has been added, additional tests can be added to
validate that flow.

Change-Id: I5a12fe859e61f09d6bfad8b2072a14ee1cf5326c

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -101,6 +101,7 @@ source_set("unittests") {
     "dnssd/impl/service_key_unittest.cc",
     "dnssd/public/dns_sd_instance_record_unittest.cc",
     "dnssd/public/dns_sd_txt_record_unittest.cc",
+    "mdns/mdns_publisher_unittest.cc",
     "mdns/mdns_querier_unittest.cc",
     "mdns/mdns_random_unittest.cc",
     "mdns/mdns_reader_unittest.cc",
