mDNS: Responder Impl
Implements the mDNS Responder as previously defined in CL:
https://chromium-review.googlesource.com/c/openscreen/+/1922729

The MdnsResponder is responsible for replying to all mDNS Queries
recieved by the mDNS Reciever. Depending on the type of mDNS
Query, it will wait for the appropriate amount of time before
responding, and will populate the AdditionalRecords field of the
response with appropriate record types as defined in the DNS-SD
RFC.

Change-Id: Ida5d05bfa3e467aaa87cd14ea31683d480c2331c

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -106,6 +106,7 @@ source_set("unittests") {
     "mdns/mdns_reader_unittest.cc",
     "mdns/mdns_receiver_unittest.cc",
     "mdns/mdns_records_unittest.cc",
+    "mdns/mdns_responder_unittest.cc",
     "mdns/mdns_sender_unittest.cc",
     "mdns/mdns_trackers_unittest.cc",
     "mdns/mdns_writer_unittest.cc",
