Add receiver authentication steps
This change adds the necessary crypto + messaging steps for a Cast
receiver to authenticate itself as such.  It also adds an integration
test that checks our sender authentication code against this receiver
authentication code.

Bug: openscreen:91
Change-Id: If298b8781bc95116714eb36fa68ef96ba82742a3

--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -66,6 +66,7 @@ source_set("test_helpers") {
     "certificate/test_helpers.h",
     "channel/test/fake_cast_socket.h",
     "channel/test/mock_cast_message_handler.h",
+    "channel/test/mock_socket_error_handler.h",
   ]
   public_deps = [
     ":certificate",
