--- a/cast/sender/BUILD.gn
+++ b/cast/sender/BUILD.gn
@@ -21,6 +21,8 @@ source_set("channel") {
   public_deps = [
     "../../platform",
     "../../third_party/boringssl",
+    "../common:certificate",
+    "../common:channel",
   ]
 }
 
