--- a/BUILD.gn
+++ b/BUILD.gn
@@ -11,6 +11,7 @@ group("gn_all") {
   deps = [
     "cast/common:certificate",
     "cast/common:channel",
+    "cast/receiver:channel",
     "cast/sender:channel",
     "cast/streaming:receiver",
     "cast/streaming:sender",
@@ -64,8 +65,10 @@ source_set("openscreen_unittests_all") {
   testonly = true
   public_deps = [
     "cast/common:unittests",
+    "cast/receiver:unittests",
     "cast/sender:unittests",
     "cast/streaming:unittests",
+    "cast/test:unittests",
     "discovery:unittests",
     "osp:unittests",
     "osp/msgs:unittests",
